[APPS] update package dependencies
MH3-94075

--- a/package.yml
+++ b/package.yml
@@ -5,9 +5,8 @@ package:
   type: "application"
   status: "production"
   required: false
-  version: "1.0.0"
 
   dependencies:
     - name: "csp"
       type: "package"
-      version: "3.19.0"
+      version: "v3.19.0"
