--- a/package.xml
+++ b/package.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<?xml version='1.0' encoding='UTF-8' standalone='no'?>
 <Package name="csp_apps_sama7d65">
     <Dependencies>
         <Dependency name="csp" version="v3.19.0"/>
